Resolves: fdo#86931 wrong offsets used to set language

after Chinese conversion. the _aOldSel is the one
that has the start and end index set to the end of the
replacement text and so the calculation only makes
sense on that selection

Change-Id: I152067550d7741579bfc6ca026072b16ac7c2dd6
(cherry picked from commit 6d10a42d5b1690b3b1ed81d99a3a1bc9b65c30d9)